--- a/index.html
+++ b/index.html
@@ -367,13 +367,20 @@
 
         </section>
 
-        <section id="sm-banner" class="section-p1"></section>
+        <section id="sm-banner" class="section-p1">
             <div class="banner-box">
                 <h4>queima de estoque</h4>
-                <h2>a loja inteira com 20% de descontos</h2>
+                <h2>moda de verão</h2>
                 <span>não perca essa oportunidade</span>
                 <button>Entenda como funciona</button>
             </div>
+            <div class="banner-box">
+                <h4>queima de estoque</h4>
+                <h2>moda de verão</h2>
+                <span>não perca essa oportunidade</span>
+                <button>Explore as oportunidades</button>
+            </div>
+        </section>
         <!-- 1:15:06 -->
     </body>
 
